--- a/index.html
+++ b/index.html
@@ -39,14 +39,7 @@
         </div>
 
         <div class="table-container">
-            <table id="scheduleTable">
-                <thead>
-                    <tr>
-                        <th>Día</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
+            <div id="scheduleContainer"></div>
         </div>
     </div>
     <script src="https://unpkg.com/xlsx/dist/xlsx.full.min.js"></script>
