--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <button onclick="updateSchedules()" class="btn">Actualizar Horarios</button>
             </div>
-            <button onclick="generateNewSchedule()" class="btn btn-primary">Generar Nuevo Horario</button>
+            <button onclick="generateNewSchedule()" class="btn btn-primary">Reasignar Guardias</button>
             <button onclick="exportToExcel()" class="btn btn-export">Exportar a Excel</button>
         </div>
 
